css fix for "Loading document" wrapping, fix issue with metadata table center aligning

--- a/interactiveSemantics/metadataRenderer.css
+++ b/interactiveSemantics/metadataRenderer.css
@@ -127,6 +127,7 @@
 	padding-right: 10px;
 	padding-bottom: 1px;
 	padding-top: 1px;
+	width: 20px;
 }
 
 .metadataContainer .valueCol{
@@ -279,7 +280,7 @@
 	height: 15px;
 	margin-bottom: 4px;
 	padding: 2px 16px 2px 8px; 
-	
+	white-space: nowrap;
 }
 
 .metadataContainer .nestedPad{
